--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "antd-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://997850262.github.io/music",
+  "homepage": "https://997850262.github.io/music/",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.4",
